--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+    font-size: 18px;
+    color: #E5E7EB;
   }
   
   .header {
@@ -19,6 +21,28 @@ body {
     justify-content: center;
     color: white;
 
+  }
+
+  .section3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    padding: 96px;
+
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    background-color: #E5E7EB;
+    color: #1F2937;
+  }
+
+  .quotename{
+    color: black;
+    font-size: 18px;
+    font-style: normal;
+    align-self: flex-end;
   }
   
   
