--- a/style.css
+++ b/style.css
@@ -123,4 +123,41 @@ body {
   border: 2px solid white;
 }
 
+.empty-box {
+  border: 2px solid #3882F6;
+  border-radius: 10px;
+  width: 100px;
+  height: 100px;
+
+}
+
+.picture-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 20px;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 36px;
+  color: #1F2937;
+  font-weight: 900;
+  gap: 36px;
+}
+
+.picture {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100px;
+  font-size: 11px;
+}
+/* .caption {
+  font-size: 12px;
+  color: #1F2937
+} */
   
