--- a/style.css
+++ b/style.css
@@ -1,124 +1,150 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    min-height: 100vh;
-    font-size: 18px;
-    color: #E5E7EB;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .header {
-    height: 72px;
-    background: #1F2937;
-    font-size: 24px;
-    color: #F9FAF8;
-  }
-  
-  .footer {
-    height: 72px;
-    background: #1F2937;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  font-size: 18px;
+  color: #E5E7EB;
+  display: flex;
+  flex-direction: column;
+}
 
-  }
+/* HEADER */
 
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  ul {
-    display: flex;
-    list-style: none;
-    gap: 12px;
-  }
-
-  a { 
-    color: #666;
-    text-decoration: none;
-    font-size: 18px;
-  }
-
-  .section1 {
-    background: #1F2937;
-    display: flex;
-    padding: 100px;
-
-  }
-
-  .main-text {
-    font-size: 48px;
-    font-weight: 900;
-    color: #F9FAF8;
-  }
-
-  .secondary-text {
-    font-size: 18px;
-    color: #E5E7EB;
-  }
-
-  .image-placeholder {
-    width: 350px;
-    height: 200px;
-    background-color: #666;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  button {
-    background-color: #3882F6;
-    color: #F9FAF8;
-    text-align: center;
-    padding: 8px 25px 8px 25px;
-    border-radius: 8px;
-    border: none;
-    margin-top: 20px;
-  }
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 72px;
+  background: #1F2937;
+  font-size: 24px;
+  color: #F9FAF8;
+}
 
 
+ul {
+  display: flex;
+  list-style: none;
+  gap: 12px;
+}
 
-  .section3 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+a {
+  color: #666;
+  text-decoration: none;
+  font-size: 18px;
+}
 
-    padding: 96px;
+/* SECTION 1 */
 
-    font-size: 36px;
-    font-style: italic;
-    font-weight: lighter;
-    background-color: #E5E7EB;
-    color: #1F2937;
-  }
+.section1 {
+  background: #1F2937;
+  display: flex;
+  padding: 100px;
+  gap: 30px;
 
-  .quotename{
-    color: black;
-    font-size: 18px;
-    font-style: normal;
-    align-self: flex-end;
-    font-weight: 500;
-  }
+}
 
-  .section4 {
-    padding: 100px;
-  }
-  
+.main-text {
+  font-size: 48px;
+  font-weight: 900;
+  color: #F9FAF8;
+}
+
+.secondary-text {
+  font-size: 18px;
+  color: #E5E7EB;
+}
+
+.image-placeholder {
+  width: 400px;
+  height: 200px;
+  background-color: #666;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+  background-color: #3882F6;
+  color: #F9FAF8;
+  text-align: center;
+  padding: 8px 25px 8px 25px;
+  border-radius: 8px;
+  border: none;
+  margin-top: 20px;
+}
+
+/* SECTION 2 */
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 24px;
+  color: #1F2937;
+  font-weight: 700;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  gap: 36px;
+}
+
+.picture {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100px;
+  font-size: 11px;
+  font-weight: 150;
+}
+
+.left {
+  padding: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+
+}
+
+/* SECTION 3 */
+
+.section3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  padding: 96px;
+
+  font-size: 36px;
+  font-style: italic;
+  font-weight: lighter;
+  background-color: #E5E7EB;
+  color: #1F2937;
+}
+
+.quotename {
+  color: black;
+  font-size: 18px;
+  font-style: normal;
+  align-self: flex-end;
+  font-weight: 500;
+}
+
+/* SECTION 4 */
+
+.section4 {
+  padding: 100px;
+}
+
 .call-to-action-box {
   background-color: #3882F6;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 30px;
+  border-radius: 20px;
   padding: 48px;
 }
 
-#actionButton  {
+#actionButton {
   border-color: #F9FAF8;
   border: 2px solid white;
 }
@@ -135,29 +161,16 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 20px;
+  gap: 30px;
 }
 
-.section2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 36px;
-  color: #1F2937;
-  font-weight: 900;
-  gap: 36px;
-}
 
-.picture {
+.footer {
+  height: 72px;
+  background: #1F2937;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  text-align: center;
-  width: 100px;
-  font-size: 11px;
+  justify-content: center;
+  color: white;
+
 }
-/* .caption {
-  font-size: 12px;
-  color: #1F2937
-} */
-  
